--- a/package.json
+++ b/package.json
@@ -25,8 +25,11 @@
   },
   "type": "module",
   "dependencies": {
-    "bits-ui": "^0.21.4",
+    "bits-ui": "^0.21.5",
     "clsx": "^2.1.1",
+    "cookies": "^0.9.1",
+    "d3": "^7.9.0",
+    "d3-scale": "^4.0.2",
     "lucide-svelte": "^0.373.0",
     "tailwind-merge": "^2.3.0",
     "tailwind-variants": "^0.2.1"
