--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "d3-scale": "^4.0.2",
     "lucide-svelte": "^0.373.0",
     "tailwind-merge": "^2.3.0",
-    "tailwind-variants": "^0.2.1"
+    "tailwind-variants": "^0.2.1",
+    "uuid": "^9.0.1"
   }
 }
