feat: added Dialog for editing entries and a datepicker for changing the date

--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
   },
   "type": "module",
   "dependencies": {
-    "bits-ui": "^0.21.5",
+    "@internationalized/date": "^3.5.2",
+    "bits-ui": "^0.21.6",
     "clsx": "^2.1.1",
     "cookies": "^0.9.1",
     "d3-scale": "^4.0.2",
